# ear-training-spectrogram

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  PLAN.md  README.md
.github/workflows/: ci.yml
shaders/compute/: fft.comp  magnitude.comp  max_hold.comp  smooth_magnitude.comp  update.comp  waterfall_update.comp  window_r2c.comp
shaders/render/: points.frag  points.vert  spectrum.frag  spectrum.vert  waterfall.frag  waterfall.vert
src/: main.cpp
src/audio/: CLAUDE.md  audio_capture.cpp  audio_capture.hpp  fft_config.cpp  fft_config.hpp  miniaudio_impl.cpp  music_theory.hpp  noise_floor.cpp  noise_floor.hpp  pitch_detect.cpp  pitch_detect.hpp  pitch_smoother.hpp  ring_buffer.hpp  source_classifier.hpp  yin.cpp  yin.hpp
src/core/: CLAUDE.md  app_config.cpp  app_config.hpp  app_state.hpp  camera.cpp  camera.hpp  gl_init.cpp  gl_init.hpp  gpu_pipeline.cpp  gpu_pipeline.hpp  log.hpp  param.hpp  shader.cpp  shader.hpp
src/ui/: CLAUDE.md  frame_data.hpp  imgui_renderer.cpp  imgui_renderer.hpp  spectrum_axis_widget.cpp  spectrum_axis_widget.hpp  tuner_widget.cpp  tuner_widget.hpp  waveform_widget.cpp  waveform_widget.hpp  widget.hpp
tests/: gl_test_fixture.hpp  test_fft.cpp  test_music_theory.cpp  test_pitch_detect.cpp  test_ring_buffer.cpp  test_shader_loading.cpp  test_yin.cpp
